# ActingCommand-Runtime

./: .gitignore  AGENTS.md  CHECKPOINT.md  CONTEXT.md  Cargo.toml  NOTICE.md  PLANS.md  README.en.md  README.md  go.mod
.github/workflows/: approval-provenance.yml  ci.yml
apps/actingctl/: Cargo.toml
apps/actingctl/src/: main.rs
apps/actingctl/tests/: c4_process.rs
apps/actingd/: Cargo.toml
apps/actingd/src/: config.rs  main.rs
apps/actingd/tests/: process.rs
apps/actinglab/: Cargo.toml  build.rs
apps/actinglab/src/: contained_resources.rs  drive_cli.rs  env_detection.rs  frame_store.rs  lab2_cli.rs  lab_run.rs  legacy_control_capture.rs  maa_task_graph.rs  main.rs  package_build.rs  package_cli.rs  package_offline.rs  project_interface.rs  readonly_cli.rs  recovery_exec.rs  resource_authoring.rs  resource_convert.rs  run_summary.rs  runtime_capture_backend.rs  runtime_debug.rs  runtime_input_backend.rs  runtime_session_adapter.rs  runtime_slice_cli.rs  runtime_stream_adapter.rs
apps/actinglab/src/tests/: contained_semantic.rs  semantic_fixture.rs  test_env.rs
apps/actinglab/tests/: c4_runtime_process.rs  golden_protocol.rs  lab2_cli_contract.rs  package_offline.rs  resource_authoring_roundtrip.rs  runtime_input_proxy.rs  session_closeout.rs
apps/actinglab/tests/golden/: EXIT_CODES.md  README.md  REVIEW.md  expected.json
apps/device-test/: Cargo.toml
apps/vision-provider-check/: Cargo.toml
apps/vision-provider-check/src/: main.rs
benchmarks/: README.md
benchmarks/go/: contract_bench_test.go
benchmarks/python/: bench_runtime_contracts.py
benchmarks/reports/: 2026-07-02-feature-match-gate.md  2026-07-02-p65a-maa-fusion-chain-closeout.md  2026-07-02-r1-maa-ocr-artifact-audit.md  2026-07-02-r1-maa-provider-export-audit.md  2026-07-02-r1-ppocr-onnx-full-frame-smoke.md  2026-07-02-r1-ppocr-onnx-roi-smoke.md  2026-07-02-r1-r3-ffi-boundary.md  2026-07-02-r3-onnxruntime-real-smoke.md  2026-07-03-lab-selfheal-c0a.md  2026-07-03-lab-selfheal-c0b.md  2026-07-03-lab-selfheal-c0c.md  2026-07-03-lab-selfheal-c1.md  2026-07-03-lab-selfheal-c2.md  (+5 more)
contracts/: README.md  primitive-service.md  runtime-api.openapi.yaml  runtime-events.schema.json  runtime-project-interface.md  server-keys.md  session-record-drift-amend.md  task-flow.schema.json
crates/artifact-store/: Cargo.toml
crates/artifact-store/src/: error.rs  exporter.rs  frame_store.rs  lib.rs  naming.rs  pipeline.rs  portable_archive.rs  store.rs
crates/artifact-store/tests/: sealed_global_ledger.rs
crates/device/: Cargo.toml
crates/device/src/: adb.rs  capture.rs  discovery.rs  emulator.rs  error.rs  input.rs  lib.rs  maatouch.rs  minitouch.rs  mumu.rs  replay.rs  touch.rs  vendor_stdio.rs
crates/lab/: Cargo.toml
crates/lab/src/: context.rs  drive.rs  drive_api.rs  env_api.rs  env_detection.rs  frame_store.rs  lab_run.rs  lab_run_api.rs  ledger_port.rs  lib.rs  maa_task_graph.rs  package_api.rs  package_build.rs  package_validate.rs  ports.rs  projection.rs  readonly.rs  readonly_api.rs  resource_convert.rs  state.rs
crates/lab/src/drive/: tests.rs
crates/lab/src/env_detection/: lock.rs  tests.rs
crates/lab/src/lab_run/: api.rs  bundle.rs  context.rs  execute.rs  output.rs  test_support.rs
crates/lab/src/lab_run/tests/: bundle_and_actions.rs  context_and_output.rs  fixtures.rs  guards_and_recovery.rs  mod.rs
crates/lab/src/readonly/: tests.rs
crates/lab/src/resource_convert/: mod.rs  tests.rs
crates/lab/tests/: lab_run_api.rs  package_api.rs
crates/onnx-provider-support/: Cargo.toml
crates/onnx-provider-support/src/: lib.rs
crates/pack-containment/: Cargo.toml
crates/pack-containment/src/: admission.rs  lib.rs  navigation.rs
crates/pack-containment/tests/: compile_fail.rs  consumer_architecture.rs
crates/pack-containment/tests/ui/: admitted_package_construct.rs  admitted_package_construct.stderr  loaded_bundle_construct.rs  loaded_bundle_construct.stderr  loaded_bundle_entry_bytes.rs  loaded_bundle_entry_bytes.stderr  raw_admission_document.rs  raw_admission_document.stderr
crates/recognition/: Cargo.toml
crates/recognition/src/: lib.rs
crates/resource-tooling/: Cargo.toml
crates/resource-tooling/src/: api.rs  authoring.rs  environment.rs  lib.rs  maa_task_graph.rs  package_build.rs  package_publish.rs  package_validate.rs
crates/resource-tooling/src/resource_convert/: mod.rs  tests.rs
crates/resource-tooling/tests/: neutral_game_pipeline.rs
crates/runtime-client/: Cargo.toml
crates/runtime-client/src/: client.rs  error.rs  input.rs  ipc.rs  lib.rs  tests.rs
crates/runtime-client/tests/: c3a_process.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: actinglab.rs  capture_store.rs  lib.rs
crates/runtime-host/: Cargo.toml
crates/runtime-host/src/: agent_dispatcher.rs  approval.rs  backend.rs  emulator_control.rs  error.rs  events.rs  fact_store.rs  host.rs  ipc.rs  lib.rs  monitor.rs  owner.rs  performance.rs  performance_control.rs  planning.rs  policy_control.rs  policy_host.rs  procedure_manifest.rs  project_interface.rs  proposal.rs  provider.rs  strategy.rs  tests.rs  time.rs
crates/runtime-state/: Cargo.toml
crates/runtime-state/src/: error.rs  lib.rs  schema.sql  store.rs
crates/task-loop/: Cargo.toml
crates/task-loop/src/: lib.rs  probe.rs
external-tools/: NOTICE.md
providers/ppocr-onnx-json/: Cargo.toml
providers/ppocr-onnx-json/src/: lib.rs
ratchet/: actinglab_commands.json
resources/: upstream-manifest.toml  vision-provider-artifacts.example.json
runtime/: README.md  alice_runtime_orchestrator.py
scripts/: start-runtime.ps1  stop-runtime.ps1
tests/: build_lab_pkg.py
tools/actinglab-architecture/: Cargo.toml  README.md  generic-domain-v1.toml  generic-domain-v2.toml  tracked-input-policy-v1.toml
tools/actinglab-architecture/src/: approval_provenance.rs  approval_provenance_main.rs  external_compat.rs  external_compat_main.rs  generic_domain.rs  generic_domain_main.rs  lib.rs  main.rs  trusted_provenance.rs  trusted_provenance_main.rs
tools/actinglab-architecture/tests/: workspace_guards.rs
(+152 files in other folders)
