# SPDX-License-Identifier: AGPL-3.0-only

[workspace]
members = [
    "apps/actinglab",
    "apps/device-test",
    "apps/vision-provider-check",
    "benchmarks/rust",
    "crates/actingcommand-contract",
    "crates/device",
    "crates/ledger",
    "crates/page-detector",
    "crates/onnx-provider-support",
    "crates/recognition",
    "crates/recognition-pack",
    "crates/runtime-core",
    "crates/task-loop",
    "crates/vision-ffi",
    "providers/onnxruntime-json",
    "providers/ppocr-onnx-json",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/HS7097/ActingCommand-Runtime"

[workspace.dependencies]
actingcommand-contract = { path = "crates/actingcommand-contract" }
actingcommand-device = { path = "crates/device" }
actingcommand-ledger = { path = "crates/ledger" }
actingcommand-onnx-provider-support = { path = "crates/onnx-provider-support" }
actingcommand-page-detector = { path = "crates/page-detector" }
actingcommand-recognition = { path = "crates/recognition" }
actingcommand-recognition-pack = { path = "crates/recognition-pack" }
actingcommand-runtime-core = { path = "crates/runtime-core" }
actingcommand-task-loop = { path = "crates/task-loop" }
actingcommand-vision-ffi = { path = "crates/vision-ffi" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
