# SPDX-License-Identifier: AGPL-3.0-only

[workspace]
members = [
    "apps/actingctl",
    "apps/actingd",
    "apps/actinglab",
    "apps/device-test",
    "apps/vision-provider-check",
    "benchmarks/rust",
    "crates/actingcommand-contract",
    "crates/arbitrator",
    "crates/device",
    "crates/ledger",
    "crates/lab",
    "crates/page-detector",
    "crates/pack-containment",
    "crates/onnx-provider-support",
    "crates/recognition",
    "crates/recognition-pack",
    "crates/runtime-core",
    "crates/runtime-client",
    "crates/runtime-host",
    "crates/scheduler",
    "crates/task-loop",
    "crates/vision-ffi",
    "providers/onnxruntime-json",
    "providers/ppocr-onnx-json",
    "tools/actinglab-architecture",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/HS7097/ActingCommand-Runtime"

[workspace.dependencies]
actingcommand-contract = { path = "crates/actingcommand-contract" }
actingcommand-arbitrator = { path = "crates/arbitrator" }
actingcommand-device = { path = "crates/device" }
actingcommand-ledger = { path = "crates/ledger" }
actingcommand-lab = { path = "crates/lab" }
actingcommand-onnx-provider-support = { path = "crates/onnx-provider-support" }
actingcommand-page-detector = { path = "crates/page-detector" }
actingcommand-pack-containment = { path = "crates/pack-containment" }
actingcommand-recognition = { path = "crates/recognition" }
actingcommand-recognition-pack = { path = "crates/recognition-pack" }
actingcommand-runtime-core = { path = "crates/runtime-core" }
actingcommand-runtime-client = { path = "crates/runtime-client" }
actingcommand-runtime-host = { path = "crates/runtime-host" }
actingcommand-scheduler = { path = "crates/scheduler" }
actingcommand-task-loop = { path = "crates/task-loop" }
actingcommand-vision-ffi = { path = "crates/vision-ffi" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
