# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-actingctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "actingctl"
path = "src/main.rs"

[dependencies]
actingcommand-contract = { workspace = true }
actingcommand-device = { workspace = true }
actingcommand-runtime-client = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
actingcommand-runtime-host = { workspace = true }
actingcommand-scheduler = { workspace = true }
tempfile = "3"
