# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-actingd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
actingcommand-contract = { workspace = true }
actingcommand-device = { workspace = true }
actingcommand-runtime-host = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
actingcommand-policy = { workspace = true }
actingcommand-runtime-client = { workspace = true }
tempfile = "3"
