# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-actinglab"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "actinglab"
path = "src/main.rs"

[dependencies]
actingcommand-contract = { workspace = true }
actingcommand-artifact-store = { workspace = true }
actingcommand-device = { workspace = true }
actingcommand-lab = { workspace = true }
actingcommand-ledger = { workspace = true }
actingcommand-page-detector = { workspace = true }
actingcommand-recognition = { workspace = true }
actingcommand-recognition-pack = { workspace = true }
actingcommand-resource-tooling = { workspace = true }
actingcommand-runtime-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
actingcommand-pack-containment = { workspace = true }
actingcommand-runtime-host = { workspace = true }
actingcommand-scheduler = { workspace = true }
tempfile = "3"
