# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-vision-provider-check"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
actingcommand-vision-ffi = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { workspace = true }
serde_json = { workspace = true }
