# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-artifact-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
actingcommand-contract = { workspace = true }
actingcommand-device = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
actingcommand-ledger = { workspace = true }
tempfile = "3"
