# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-lab"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
actingcommand-contract = { workspace = true }
actingcommand-device = { workspace = true }
actingcommand-ledger = { workspace = true }
actingcommand-recognition = { workspace = true }
actingcommand-recognition-pack = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
