# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-onnx-provider-support"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "api-24",
    "load-dynamic",
    "std",
] }
