# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-pack-containment"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
actingcommand-page-detector = { workspace = true }
actingcommand-recognition-pack = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
actingcommand-recognition = { workspace = true }
tempfile = "3"
trybuild = "1"
