# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-recognition"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = "0.25"
