[package]
name = "actingcommand-runtime-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
actingcommand-contract = { workspace = true }
actingcommand-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
actingcommand-device = { workspace = true }
actingcommand-runtime-host = { workspace = true }
actingcommand-scheduler = { workspace = true }
tempfile = "3"
