# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-runtime-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
actingcommand-contract = { workspace = true }
actingcommand-device = { workspace = true }
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tempfile = "3"
