# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-runtime-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
actingcommand-artifact-store = { workspace = true }
actingcommand-contract = { workspace = true }
actingcommand-device = { workspace = true }
actingcommand-execution-kernel = { workspace = true }
actingcommand-ledger = { workspace = true }
actingcommand-scheduler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
