# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-runtime-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
actingcommand-contract = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
