# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-ppocr-onnx-json-provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actingcommand-onnx-provider-support = { workspace = true }
actingcommand-vision-ffi = { workspace = true }
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "api-24",
    "load-dynamic",
    "std",
] }
serde = { workspace = true }
serde_json = { workspace = true }
