# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "actingcommand-actinglab-architecture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "actinglab-command-inventory"
path = "src/main.rs"

[[bin]]
name = "trusted-provenance-guard"
path = "src/trusted_provenance_main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
syn = { version = "2", features = ["full", "visit"] }
toml = "1"

[dev-dependencies]
sha2 = { workspace = true }
